Updated NL tempalte for #26903

--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -13,10 +13,10 @@
 
 
 {% block translations %}
-{%if release.get_translations.languages %}<p>{% trans "Translations are available on your country page"%}: {% for country in release.get_translations.countries %}{% for translation in country %}{% if forloop.counter0 > 0 %}&mdash;{% endif %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{ translation.full_code|code_to_local_country }}</a>{% endfor %}{% if not forloop.last %}, {% endif %}{%endfor%}</p>
+{%if release.get_translations.languages %}<p>{% trans "Translations are available on other countries page"%}: {% for country in release.get_translations.countries %}{% for translation in country %}{% if forloop.counter0 > 0 %}&mdash;{% endif %}<a href="{{base_url}}{{translation.object.get_absolute_url}}">{{ translation.full_code|code_to_local_country }}</a>{% endfor %}{% if not forloop.last %}, {% endif %}{%endfor%}</p>
 
 {% endif %}
-{% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available in many languages at:" %} <a href="{{base_url}}{{ release.get_absolute_url }}kids/">{{base_url}}{{ release.get_absolute_url }}kids/</a></p>{% endif %}{% endblock %}
+{% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available at:" %} <a href="{{base_url}}{{ release.get_absolute_url }}kids/">{{base_url}}{{ release.get_absolute_url }}kids/</a></p>{% endif %}{% endblock %}
 
 {% if signature %}
 <p>
