--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_list.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_list.html
@@ -12,7 +12,7 @@
     </a>
   </li>
 {% if has_add_permission %}
-	<li><a href="{% url admin_site:index %}import/newsletters/" class="historylink">Import files</a></li>
+	<li><a href="{% url 'admin_site:index' %}import/newsletters/" class="historylink">Import files</a></li>
 	<li>
 	<a href="add/{% if is_popup %}?_popup=1{% endif %}" class="addlink">
 		{% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
