--- a/src/djangoplicity/newsletters/templates/newsletters/includes/right_releases.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/right_releases.html
@@ -1,7 +1,7 @@
 {% if releases %}
 {% load djangoplicity_datetime %}
 <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">
-<a href="{{feed_url}}"><img border="0"  src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% url releases_defaultquery %}">{{org}} Press Release{{ releases|pluralize }}</a>
+<a href="{{feed_url}}"><img border="0"  src="{{base_url}}{{MEDIA_URL}}djangoplicity/images/rssicon.png"></a>&nbsp;<a style="color: #285A97;font-size: 12px;font-weight: bold; text-decoration:none;" href="{{base_url}}{% url 'releases_defaultquery' %}">{{org}} Press Release{{ releases|pluralize }}</a>
 </h3> 
 
 {% for obj in releases %}
