--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/schedule_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/schedule_form.html
@@ -1,15 +1,13 @@
 {% extends "admin/newsletters/newsletter/change_form.html" %}{% load i18n %}
 
-{% load adminmedia %} /* At the top of the template. */
-
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript">
-window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{% endfilter %}";
+window.__admin_media_prefix__ = "{% filter escapejs %}{{ STATIC_URL}}/admin/{% endfilter %}";
 </script>
 {% url 'admin:jsi18n' as jsi18nurl %}
 <script type="text/javascript" src="{{ jsi18nurl|default:"../../../../jsi18n/" }}"></script>
 {{ media }}
-<script type="text/javascript" src="{% admin_media_prefix %}js/core.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL}}/admin/js/core.js"></script>
 {{ adminform.media }}
 {% endblock %}
 
