--- a/src/djangoplicity/newsletters/templates/newsletters/includes/main_comparison.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/main_comparison.html
@@ -1,7 +1,7 @@
 {% load djangoplicity_datetime i18n %}
 {% with image_url="imagecomparisons/newsfeature/"|add:main_comparison.id|add:".jpg" %}
 <tr> 
-<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{{ MEDIA_URL }}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: {% if titlesize = "small" %}right{% else %}left{% endif %};vertical-align: bottom;background-color:black;"> 
+<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{{ MEDIA_URL }}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;text-align: {% if titlesize = "small" %}right{% else %}left{% endif %};vertical-align: bottom;background-color:black; background-repeat: no-repeat"> 
 <!-- Outlook 2007 only -->
 <!--[if gte mso 9]>
 <img src="{{base_url}}{{ MEDIA_URL }}{{image_url}}" width="{{width}}" height="{{height}}" />
