--- a/src/djangoplicity/newsletters/templates/newsletters/includes/main_image.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/main_image.html
@@ -2,9 +2,9 @@
 {% with image_url="download/"|add:main_image.newsfeature_image_token|add:"/newsfeature/"|add:main_image.id|add:".jpg" %}
 <tr> 
 	{% if "internalimage" in main_image.Archive.Meta.root  %}
-	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'internalimages_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}"> 
+	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'internalimages_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat"> 
 	{% else %}
-	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'images_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}"> 
+	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'images_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat"> 
 	{% endif %}
 <!-- Outlook 2007 only -->
 <!--[if gte mso 9]>
