--- a/src/djangoplicity/newsletters/templates/newsletters/includes/announcement.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/announcement.html
@@ -9,7 +9,7 @@
 <p>{{ announcement.description|truncatewords_html:100|description_links|release_ids|safe }}</p>
 
 <p>{% trans "The announcement, images and videos are available on:" %}<br/>
-<a href="{{ base_url }}{{ announcement.get_absolute_url }}">{{ base_url }}{{ announcement.get_absolute_url }}</a>{% if embargo %} (login: <strong>{{ announcement.get_embargo_login.0 }}</strong> password: <strong>{{ announcement.get_embargo_login.1 }}</strong>){% endif %}</p>
+<a href="{{ base_url }}{{ announcement.get_absolute_url }}?lang">{{ base_url }}{{ announcement.get_absolute_url }}</a>{% if embargo %} (login: <strong>{{ announcement.get_embargo_login.0 }}</strong> password: <strong>{{ announcement.get_embargo_login.1 }}</strong>){% endif %}</p>
 
 {% if signature %}
 <p>
