--- a/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/press_release.html
@@ -9,11 +9,11 @@
 <p>{{release.headline|linebreaksbr|description_links|release_ids|safe}}</p>
 
 <p>{% trans "The release, images and videos are available on:" %}<br/>
-<a href="{{base_url}}{{release.get_absolute_url}}">{{base_url}}{{release.get_absolute_url}}</a>{% if embargo %} (login: <strong>{{release.get_embargo_login.0}}</strong> password: <strong>{{release.get_embargo_login.1}}</strong>){% endif %}</p>
+<a href="{{base_url}}{{release.get_absolute_url}}?lang">{{base_url}}{{release.get_absolute_url}}</a>{% if embargo %} (login: <strong>{{release.get_embargo_login.0}}</strong> password: <strong>{{release.get_embargo_login.1}}</strong>){% endif %}</p>
 
 
 {% block translations %}
-{% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available at:" %} <a href="{{base_url}}{{ release.get_absolute_url }}kids/">{{base_url}}{{ release.get_absolute_url }}kids/</a></p>{% endif %}{% endblock %}
+{% if release.kids_title and release.kids_description %}<p>{% trans "Space Scoop - the children's version of this release is available at:" %} <a href="{{base_url}}{{ release.get_absolute_url }}kids/?lang">{{base_url}}{{ release.get_absolute_url }}kids/</a></p>{% endif %}{% endblock %}
 
 {% if signature %}
 <p>
