--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/send_now_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/send_now_form.html
@@ -41,7 +41,7 @@ window.__admin_media_prefix__ = "{% filter escapejs %}{% static 'admin' %}{% end
 </div>
 </fieldset>
 {% else %}
-<form action="." method="post" id="{{ opts.module_name }}_form">{% csrf_token %}{% block form_top %}{% endblock %}
+<form action="." method="post" id="{{ opts.model_name }}_form">{% csrf_token %}{% block form_top %}{% endblock %}
 <div>
 {% if is_popup %}<input type="hidden" name="_popup" value="1" />{% endif %}
 {% if adminform.errors %}
