--- a/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/right_potws.html
@@ -7,8 +7,8 @@
 
 {% for obj in potws %}
 <div style="font-family: Helvetica, Arial;font-size: 12px;color:#505050;">
-{% if obj.image %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}?lang"><img border="0" src="{{base_url}}{{obj.image.resource_potw.url}}" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.image.release_date|datetime:"DATE"}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}?lang">{{ obj.image.title }}</a></p>
-{% endif %}{% if obj.comparison %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.comparison.get_absolute_url}}?lang"><img border="0" src="{{base_url}}{{obj.comparison.resource_potw.url}}" style="margin-bottom: 5px;"></img></a><br><strong>{{obj.comparison.release_date|datetime:"DATE"}}</strong><br /><a href="{{base_url}}{{obj.comparison.get_absolute_url}}?lang">{{ obj.comparison.title }}</a></p>{% endif %}
+{% if obj.image %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.image.get_absolute_url}}?lang"><img border="0" src="{{obj.image.resource_news.url}}" style="margin-bottom: 5px; width: 170px;"></img></a><br><strong>{{obj.image.release_date|datetime:"DATE"}}</strong><br /><a href="{{base_url}}{{obj.image.get_absolute_url}}?lang">{{ obj.image.title }}</a></p>
+{% endif %}{% if obj.comparison %}<p style="margin-bottom: 20px;"><a href="{{base_url}}{{obj.comparison.get_absolute_url}}?lang"><img border="0" src="{{obj.comparison.resource_news.url}}" style="margin-bottom: 5px; width: 170px;"></img></a><br><strong>{{obj.comparison.release_date|datetime:"DATE"}}</strong><br /><a href="{{base_url}}{{obj.comparison.get_absolute_url}}?lang">{{ obj.comparison.title }}</a></p>{% endif %}
 </div>
 {% endfor %}
 {% endif %}
