--- a/src/djangoplicity/newsletters/templates/newsletters/includes/main_image.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/includes/main_image.html
@@ -1,17 +1,17 @@
 {% load djangoplicity_datetime i18n %}
 {% with image_url="download/"|add:main_image.newsfeature_image_token|add:"/newsfeature/"|add:main_image.id|add:".jpg" %}
-<tr> 
+<tr>
 	{% if "internalimage" in main_image.Archive.Meta.root  %}
-	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'internalimages_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat"> 
+	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'internalimages_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize == "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat">
 	{% else %}
-	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'images_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize = "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat"> 
+	<td colspan="2" class="headerContent" height="{{height}}px"  background="{{base_url}}{% url 'images_defaultquery' %}{{image_url}}" style="color: #202020;font-family: Helvetica, Arial;font-size: 24px;font-weight: bold;line-height: 100%;padding: 0;vertical-align: bottom;background-color:black;text-align:{% if titlesize == "small" %}right{% else %}left{% endif %}; background-repeat: no-repeat">
 	{% endif %}
 <!-- Outlook 2007 only -->
 <!--[if gte mso 9]>
 <img src="{{base_url}}{% url 'images_defaultquery' %}{{image_url}}" width="{{width}}" height="{{height}}" />
 <![endif]-->
 {% if title %}
-	{% if titlesize = "small" %}
+	{% if titlesize == "small" %}
 			<style type="text/css">
 				#rotate {
 					    color:white;
@@ -38,9 +38,9 @@
 			<span style="background:black;padding:2px;">
 				<a style="color:white;font-size:22px; line-height: 29px; text-decoration: none; font-weight: bold;" href="{{link_url}}?lang">{{title}}{% if subtitle %}&mdash; {{subtitle}}{% endif %}</a>
 			</span>
-		</div> 
+		</div>
 	{% endif %}
 {% endif %}
-</td> 
+</td>
 </tr>
 {% endwith %}
