--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletterproxy/change_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletterproxy/change_form.html
@@ -7,8 +7,8 @@
     {% block object-tools-items %}
 	<li><a href="../../newsletter/{{ original.source.id }}/html/" class="historylink">{% trans "Original HTML" %}</a></li>
 	<li><a href="../../newsletter/{{ original.source.id }}/text/" class="historylink">{% trans "Original text" %}</a></li>
-    <li><a href="html/" class="historylink">{% trans "View HTML" %}</a></li>
-    <li><a href="text/" class="historylink">{% trans "View text" %}</a></li>
+    <li><a href="../html/" class="historylink">{% trans "View HTML" %}</a></li>
+    <li><a href="../text/" class="historylink">{% trans "View text" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
     {% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
     {% endblock %}
