--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
@@ -5,16 +5,16 @@
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
     {% block object-tools-items %}
-    <li><a href="send_test/" class="historylink">{% trans "Send test" %}</a></li>
-    {% if not original.send and original.scheduled_status == 'OFF' %}<li><a href="send_now/" class="historylink">{% trans "Send now" %}</a></li>{% endif %}
-    {% if not original.send and original.scheduled_status == 'OFF' %}<li><a href="schedule/" class="historylink">{% trans "Schedule" %}</a></li>{% endif %}
-    {% if not original.send and original.scheduled_status != 'OFF' %}<li><a href="unschedule/" class="historylink">{% trans "Cancel schedule" %}</a></li>{% endif %}
-    <li><a href="../html/" class="historylink">{% trans "View HTML" %}</a></li>
-    <li><a href="../text/" class="historylink">{% trans "View text" %}</a></li>
-	<li><a href="displays/" class="historylink" onclick='window.open( "displays/", "displayWindow",
+	<li><a href="{% url 'admin_site:send_newsletter_test_view' original.pk %}" class="historylink">{% trans "Send test" %}</a></li>
+	{% if not original.send and original.scheduled_status == 'OFF' %}<li><a href="{% url 'admin_site:send_newsletter_view' original.pk %}" class="historylink">{% trans "Send now" %}</a></li>{% endif %}
+	{% if not original.send and original.scheduled_status == 'OFF' %}<li><a href="{% url 'admin_site:schedule_newsletter_view' original.pk %}" class="historylink">{% trans "Schedule" %}</a></li>{% endif %}
+	{% if not original.send and original.scheduled_status != 'OFF' %}<li><a href="{% url 'admin_site:unschedule_newsletter_view' original.pk %}" class="historylink">{% trans "Cancel schedule" %}</a></li>{% endif %}
+	<li><a href="{% url 'admin_site:html_newsletter_view' original.pk %}" class="historylink">{% trans "View HTML" %}</a></li>
+	<li><a href="{% url 'admin_site:text_newsletter_view' original.pk %}" class="historylink">{% trans "View text" %}</a></li>
+	<li><a href="../displays/" class="historylink" onclick='window.open( "displays/", "displayWindow",
 		"status = 1, height = 600, width = 800, resizable = 1" );return false;'>{% trans "Displays" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
-    {% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
+	{% if has_absolute_url %}<li><a href="{% url 'admin:view_on_site' content_type_id original.pk %}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
     {% endblock %}
   </ul>
 {% endif %}{% endif %}
