--- a/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
+++ b/src/djangoplicity/newsletters/templates/admin/newsletters/newsletter/change_form.html
@@ -1,4 +1,5 @@
 {% extends "admin/change_form.html" %}{% load i18n %}
+{% load i18n admin_urls admin_modify %}
 
 
 {% block object-tools %}
@@ -13,7 +14,7 @@
 	<li><a href="{% url 'admin_site:text_newsletter_view' original.pk %}" class="historylink">{% trans "View text" %}</a></li>
 	<li><a href="../displays/" class="historylink" onclick='window.open( "displays/", "displayWindow",
 		"status = 1, height = 600, width = 800, resizable = 1" );return false;'>{% trans "Displays" %}</a></li>
-    <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
+	<li><a href="{% url opts|admin_urlname:'history' original.pk|admin_urlquote %}" class="historylink">{% trans "History" %}</a></li>
 	{% if has_absolute_url %}<li><a href="{% url 'admin:view_on_site' content_type_id original.pk %}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
     {% endblock %}
   </ul>
