--- a/src/djangoplicity/newsletters/templates/newsletters/newsletter_detail.html
+++ b/src/djangoplicity/newsletters/templates/newsletters/newsletter_detail.html
@@ -1,15 +1,11 @@
+{% extends 'base.html' %}
+
+{% block body%}
 <style type="text/css">
 	#nl_detail_header {
-		width: 100%;
-		background: #000146;
 		padding: 10px 0 10px 0;
 		text-align: center;
-		font-family: Arial, sans-serif, 'Helvetica Neue', Verdana;
 		margin-bottom: 10px;
-	}
-	#nl_detail_header a, a:visited{
-		color: #ee6600;
-		text-decoration: none;
 	}
 	div.embargo_notice {
 		background-color: #f4c819;
@@ -28,10 +24,15 @@
 {% endif %}
 	<p><a href="../../">Back to {{ newsletter_type }} index</a> </p>
 </div>
-{{ newsletter_html|safe }}
+<iframe src="{% url 'newsletters_embed_html' newsletter_type.slug object.pk %}" width="100%" scrolling="no" frameBorder="0" onload='javascript:resizeIframe(this);'></iframe>
 
-<script type="text/javascript" src="{{STATIC_URL}}djangoplicity/js/jquery-1.7.1.min.js"></script>
-<script type="text/javascript">
-// Hide the top "subscription" bar
-$('.preheaderContent').hide();
+{% endblock %}
+
+{% block extra_scripts %}
+
+<script>
+function resizeIframe(obj) {
+	obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
+}
 </script>
+{% endblock %}
