Information banner about ESA/Webb news

--- a/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/djangoplicity/newsletters/templates/newsletters/base.html
@@ -269,7 +269,10 @@
                 <table border="0" cellpadding="10" cellspacing="0" width="{% include "newsletters/includes/width.html" %}" id="templatePreheader" style="background-color: #FAFAFA;">
                 <tr>
                     <td valign="top" class="preheaderContent">
-                    {% block preheader %}{% endblock %}
+                        <p><b>As of July 2022, you will also receive news from ESA/Webb! Stay tuned! You can unsubscribe at any time</b></p>
+                    </td>
+                    <td valign="top" class="preheaderContent">
+                        {% block preheader %}{% endblock %}
                     </td>
                 </tr>
                 </table>
