Added new styles to Wbb information banner

--- a/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/djangoplicity/newsletters/templates/newsletters/base.html
@@ -269,7 +269,9 @@
                 <table border="0" cellpadding="10" cellspacing="0" width="{% include "newsletters/includes/width.html" %}" id="templatePreheader" style="background-color: #FAFAFA;">
                 <tr>
                     <td valign="top" class="preheaderContent">
-                        <p><b>As of July 2022, you will also receive news from ESA/Webb! Stay tuned! You can unsubscribe at any time</b></p>
+                        <div style="color: #505050;font-family: Helvetica, Arial;font-size: 10px;line-height: 100%;text-align: left;">
+                            <p><b>As of July 2022, you will also receive news from ESA/Webb! Stay tuned! You can unsubscribe at any time.</b></p>
+                        </div>
                     </td>
                 </tr>
                 <tr>
