--- a/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/djangoplicity/newsletters/templates/newsletters/base.html
@@ -270,7 +270,7 @@
                 <tr>
                     <td valign="top" class="preheaderContent">
                         <div style="color: #505050;font-family: Helvetica, Arial;font-size: 10px;line-height: 100%;text-align: left;">
-                            <p><b>As of July 2022, you will also receive news from ESA/Webb! Stay tuned! You can unsubscribe at any time.</b></p>
+                            <p><b>"Since July 2022, this newsletter includes news from both ESA/Webb and ESA/Hubble. You can reply to this email with any questions you may have."</b></p>
                         </div>
                     </td>
                 </tr>
