--- a/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/djangoplicity/newsletters/templates/newsletters/base.html
@@ -288,11 +288,11 @@
                     <!-- // Begin Template Body \\ -->
                     <table border="0" cellpadding="0" cellspacing="0" width="{% include "newsletters/includes/width.html" %}" id="templateBody">
                         <tr>
-                            <td valign="top" %}">
-                                <table border="0" cellpadding="0" cellspacing="0" %}">
+                            <td valign="top">
+                                <table border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td valign="top">
-                                            <table border="0" cellpadding="0" cellspacing="0" %}">
+                                            <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
                                                     <td valign="top" class="bodyContent" style="background-color: #FFFFFF;">
 
