The buttons sharing were remove

--- a/djangoplicity/newsletters/templates/newsletters/base.html
+++ b/djangoplicity/newsletters/templates/newsletters/base.html
@@ -328,9 +328,7 @@
                                             <!-- // Begin Module: Top Image with Content \\ -->
                                             <h3 class="h3" style="color: #285A97;display: block;font-family: Helvetica, Arial;font-size: 12px;font-weight: bold;line-height: 100%;margin-top: 10px;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;">Share this newsletter on:</h3>
 
-                                             *|FACEBOOK:LIKE|* &nbsp; *|TWITTER:TWEET|* &nbsp; *|GOOGLE:BUZZ|*
-                                            <hr style="height:1px;border:0;border-bottom:1px solid #DEDEDE;"/>
-                                             *|MC:SHARE|*
+                                             *|FACEBOOK:LIKE|* &nbsp; *|TWITTER:TWEET|* 
                                             {% else %}{%block sharebuttons %}{% endblock %}{% endif %}
                                             {% endif %}
 
